@@ -4,6 +4,9 @@ Summary of important user-visible changes for communications 1.1.2:
  ** The following functions are new:
       istrellis
       poly2trellis
+      dpcmdeco
+      dpcmenco
+      dpcmopt
 
  ** Fixed bug in `egolaydec' which gave an error when there were more
     than the three allowed erroneous bits, rather than setting the
